main.css
body {
  background-color: #2C2C2E;
  display: flex;
  flex-direction: column;
  min-width: 375px;
}

h1 {
  color: #D1D1D1;
  padding-left: 10px;
}


header {
  flex: 0 80px;
  color: #E5E5E5;
  background-color: #0A0A23;
}

main {
  color: #E5E5E5;
  background-color: #2C2C2E;
  flex: 1 calc(100vh - 110px);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
}

footer {
  color: #E5E5E5;
  background-color: #2C2C2E;
  flex: 0 30px;
}

menu {
  flex: 1;
  display: flex;
  flex-direction: row !important;
  list-style: none;
}


menu .nav-item {
  padding: 0 0.3em;
}

footer a{
  color: #0DCAF0;
  float: right;
}

@media (max-height: 600px) {
  header {
    display: none;
  }
  footer {
    display: none;
  }
  main {
    flex: 1 100vh;
  }
}

